# messaging-service

./: Makefile  README.md  docker-compose.yml  dune-project  go.mod  go.sum  project.opam
cmd/app/: main.go
cmd/messaging-svc/: app.go
docker/app/: Dockerfile
docker/db-reinit/: Dockerfile  hasta-la-vista-baby
internal/api/: api.go  api_test.go  json.go  operations.go  provider.go  response.go  router.go  types.go  util.go
internal/app/: apiserver.go  app.go  processor.go
internal/config/: config.go
internal/db/: db.go
internal/domain/: attachments.go  conversation.go  endpoint.go  endpoint_test.go  inboundOrOutbound.go  message.go  phoneChannel.go  provider.go  provider_test.go  status.go
internal/processor/: entrypoint.go  router.go  router_test.go  transition.go
internal/provider/: provider.go  provider_test.go  sendgrid.go  twilio.go
internal/repo/: conversations.go  messages.go  messages_integration_test.go
migrations/: 001_init.sql
scripts/: dev-run.sh  start.sh  test.sh
src/: api.ml  api.mli  app.ml  app.mli  attachment.ml  attachment.mli  channel.ml  channel.mli  cli.ml  cli.mli  conversation.ml  conversation.mli  db.ml  db.mli  delivery_status.ml  delivery_status.mli  dune  email.mli  endpoint.ml  endpoint.mli  http.ml  http.mli  import.ml  inbound_or_outbound.ml  inbound_or_outbound.mli  information_schema.ml  information_schema.mli  log.ml  log.mli  message.ml  message.mli  message_processor.ml  message_processor.mli  messaging_provider.ml  participant.ml  participant.mli  phone.ml  phone.mli  phone_number.ml  phone_number.mli  (+14 more)
